# KasbLinkUz

./: .dockerignore  .env.example  .env.local  .flake8  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  load_locations.py  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  text
.github/workflows/: ci.yml
.githubttt/workflows/: ci.yml
apps/: admin.py  apps.py  consumers.py  filters.py  permissions.py  routing.py  serializers.py  signals.py  tasks.py  test_auth.py  test_orders.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_location_models.py  0002_service_active.py  0003_notification.py
apps/models/: __init__.py  base.py  categories.py  chats.py  notifications.py  orders.py  users.py
apps/tests/: test_auth.py  test_orders.py  test_permissions.py  test_reviews.py
root/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
