[project]
name = "kasblinkuz"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.17.0",
    "drf-spectacular>=0.29.0",
    "factory-boy>=3.3.3",
    "faker>=40.21.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "root.settings"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py"]
